--- a/looplab/package.json
+++ b/looplab/package.json
@@ -26,5 +26,10 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.1",
     "multipipe": "^1.0.2"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6"
   }
 }
