create navigation and header

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ looplab/.idea
 mizuxe/node_modules
 mizuxe/package-lock.json
 mizuxe/.idea
+blogen/node_modules
+blogen/package-lock.json
+blogen/.idea
